styles/site.less
@generic-foreground-color: #fff;
@generic-background-color: #f2f2f2;
// @generic-background-color: #F2F2F2;
// none repeat scroll 0% 0%
html,
body {
  background-color: @generic-background-color;
  color: @generic-foreground-color;
}

@generic-dark-color: #333;
label,
p {
  color: @generic-dark-color;
}

.container-fluid {
  padding-top: 15px;
}

.scrollable-content {
  overflow-y: auto;
}

@main-row-height: 300px;
.tall-object {
  height: @main-row-height;
}

@short-row-height: 120px;
.short-object {
  height: @short-row-height;
}

label.lower-level {
  margin-top: 15px;
}

@standard-border-radius: 5px;
@big-button-width: 80px;
@standard-box-shadow: 10px 10px 10px -7px rgba(0, 0, 0, 0.75);
@dark-border: 1px solid #555;
.display-item {
  // generic display
  margin-right: 5px;
  border-radius: @standard-border-radius;
  box-shadow: @standard-box-shadow;
  // inner arrangement
  display: flex;
  flex-direction: column;
  // list group
  .list-group {
    border-top-left-radius: 0;
    border-bottom-right-radius: 0;
    .list-group-item {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
    }
    .scrollable-content;
    margin-bottom: 4px;
  }
  .input-group {
    // make the corners line up
    input:not(.num) {
      border-bottom: @dark-border;
      border-radius: @standard-border-radius @standard-border-radius 0 0;
    }
    button {
      border-bottom-right-radius: 0;
    }
  }
  // panel display
  .panel {
    height: 100%;
    margin-bottom: 0;
    // flex display
    display: flex;
    flex-direction: column;
    .panel-heading {
      display: flex;
      justify-content: space-between;
      .btn-group button {
        width: @big-button-width;
      }
    }
    .panel-body {
      flex-grow: 1;
      textarea {
        height: 100%;
      }
    }
  }
}

@top-button-gradient: white;
@bottom-button-gradient: rgba(226, 226, 226, .3);
.option-pane {
  background-color: transparent;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-radius: @standard-border-radius;
  .option-box {
    height: 100%;
    border: 1px solid #d7dada;
    border-radius: @standard-border-radius;
    padding: 10px 10px 10px 10px;
    background-image: linear-gradient(
      to bottom, @top-button-gradient, @bottom-button-gradient);
    // flex props
    flex-grow: 1;
    display: flex;
    flex-direction: column;
  }
}

input[type=checkbox] {
  display: none;
}
input[type=checkbox] + label:before {
  font-family: FontAwesome;
  display: inline-block;
}
// letter-spacing is because the check mark moves around
input[type=checkbox] + label:before {
  letter-spacing: 10px;
  content: "\f096";
}
input[type=checkbox]:checked + label:before {
  letter-spacing: 8px;
  content: "\f046";
}

// line up with checkbox
@small-padding-distance: 22px;
.options-box {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  padding-right: @small-padding-distance;
  padding-left: @small-padding-distance;
}

textarea {
  .scrollable-content;
  resize: none;
}

@panel-color: #f5f5f5;
// remove bootstrap's default styling, gradients look tacky
.panel .panel-heading,
button.btn.btn-default {
  background-image: none;
  background-color: @panel-color;
}

@first-button-padding: 10px;
button.navbar-btn:last-child {
  margin-left: @first-button-padding;
}

